# platform.adaptation.samsung_exynos.libtbm-exynos4412

./: COPYING  Makefile.am  configure.ac  project.config
lib/: libtbm_exynos4412.so.0.0.0
packaging/: libtbm-exynos4412.spec
src/: Makefile.am  tbm_bufmgr_exynos4412.c  tbm_bufmgr_tgl.h
